# TravelCopilot

./: .env.example  .gitignore  Makefile  dev-roadmap.md  docker-compose.override.yml  docker-compose.yml  plan.md
backend/: Dockerfile  openapi.json  pyproject.toml
backend/app/: checkpointer.py  config.py  db.py  llm.py  main.py
backend/app/agents/: base.py  budget_planner_agent.py  destination_context_agent.py  food_discovery_agent.py  itinerary_compiler_agent.py  local_experiences_agent.py  orchestrator.py  reviews_agent.py  scam_safety_agent.py  self_drive_search_agent.py  stay_analyst_agent.py  stay_search_agent.py  transport_optimizer_agent.py  transport_search_agent.py  visa_agent.py
backend/app/graph/: graph.py  state.py
backend/app/models/: __init__.py  clarification.py  itinerary.py  reports.py  transport.py  user_profile.py
backend/app/observability/: langfuse.py  metrics.py
backend/app/routers/: trip.py  user.py
backend/app/services/: cache_service.py  pdf_service.py
backend/app/services/templates/: itinerary.html.j2
backend/app/tools/: __init__.py  base.py  factory.py
backend/app/tools/mock/: __init__.py  _helpers.py  fx_tools.py  geo_tools.py  hub_tools.py  opening_hours_tools.py  places_tools.py  rental_tools.py  serpapi_tools.py  tavily_tools.py  transit_tools.py  visa_tools.py
backend/app/tools/real/: __init__.py  fx_tools.py  geo_tools.py  hub_tools.py  opening_hours_tools.py  places_tools.py  rental_tools.py  serpapi_tools.py  tavily_tools.py  transit_tools.py  visa_tools.py
backend/migrations/: 001_initial.sql
backend/postman/: README.md  TripPlanner.postman_collection.json  local.postman_environment.json
backend/tests/: conftest.py  test_smoke.py
backend/tests/fixtures/: flights_kolkata_leh.json  flights_kolkata_lisbon.json  food_leh.json  fx_rates.json  hotels_leh.json  hotels_lisbon.json  places_leh_attractions.json  places_lisbon_attractions.json  rentals_leh.json  scams_leh.json  scams_lisbon.json  transit_kolkata_delhi.json  visa_india_portugal.json
backend/tests/integration/: test_full_graph.py
backend/tests/unit/: __init__.py  test_agents.py  test_cache_service.py  test_models.py  test_tools.py
frontend/: package.json
